--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.error.include-stacktrace=never
+database.url=jdbc:sqlserver://telerik.badmin.org:1433/forum
+database.username=minus273dot15
+database.password=Apollo11-1969-GoodLuckMr.Gorsky
