--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.error.include-stacktrace=never
 database.url=jdbc:sqlserver://telerik.badmin.org:1433;database=forum
 database.username=minus273dot15
 database.password=Apollo11-1969-GoodLuckMr.Gorsky
-
+# swagger-ui custom path
+springfox.documentation.swagger-ui.base-url=/swagger-ui.html
