--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -4,28 +4,10 @@ on:
   push:
     branches:
       - main
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout Repository
-#        uses: actions/checkout@v2
-#
-#      - name: Set up JDK
-#        uses: actions/setup-java@v2
-#        with:
-#          distribution: 'adopt'
-#          java-version: '11'
-#
-#      - name: Build with Gradle
-#        run: ./gradlew build
 
+jobs:
   test:
     runs-on: ubuntu-latest
-
-    needs: build
 
     steps:
       - name: Checkout Repository
