docker file changes

--- a/src/main/java/com/company/web/forum/Dockerfile
+++ b/src/main/java/com/company/web/forum/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:latest
+
 LABEL authors="TeDi"
 
-ENTRYPOINT ["top", "-b"]
-
-FROM openjdk:11
+RUN apt-get update && \
+    apt-get install -y openjdk-11-jdk
 
 WORKDIR /app
 
@@ -11,3 +11,5 @@ COPY ../../../../../../../.github/workflows .
 
 RUN chmod +x ./gradlew
 RUN ./gradlew build
+
+ENTRYPOINT ["top", "-b"]
