--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      - name: docker
-        image: docker:20.10.9
+      - name: 'docker'
+        image: 'docker:20.10.9'
         ports:
           - 80:80
           - 443:443
