--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -25,3 +25,12 @@ jobs:
 
       - name: Run Tests
         run: ./gradlew test
+        with:
+          filename: site.zip
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.z }}
