Creating basic release

--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -33,4 +33,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.z }}
+          release_name: Release ${{ github.run_number }}
