--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Run Tests
         run: ./gradlew test
-        with:
-          filename: firstRelease.zip
+        env:
+          RELEASE_FILENAME: firstRelease.zip
       - name: Create Release
         uses: actions/create-release@v1
         env:
