--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -38,7 +38,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create-first-release.outputs.upload.url}}
+          upload_url: ${{ steps.create-first-release.outputs.upload_url}}
           asset_path: ./firstRelease.zip
           asset_name: site-v%{{ github.run_number }}.zip
           asset_content_type: application/zip
