--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - '*'
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -27,19 +26,21 @@ jobs:
         run: ./gradlew test
 
       - name: Create Release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create-first-release.outputs.upload_url}}
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: ./firstRelease.zip
-          asset_name: site-v%{{ github.run_number }}.zip
+          asset_name: site-v${{ github.run_number }}.zip
           asset_content_type: application/zip
