--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -51,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./my-artifact.zip
+          asset_path: ./builds/libs/forum-0.0.1-SNAPSHOT.jar
           asset_name: my-artifact.zip
           asset_content_type: application/zip
