--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Build project
+        run: |
+                zip --junk-paths my-artifact README.md
 
       - name: Create Release
         id: create_release
@@ -51,6 +54,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./builds/libs/forum-0.0.1-SNAPSHOT.jar
+          asset_path: ./my-artifact.zip
           asset_name: my-artifact.zip
           asset_content_type: application/zip
