--- a/.github/workflows/java_ci.yml
+++ b/.github/workflows/java_ci.yml
@@ -34,6 +34,10 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Make Gradlew Executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
 
